# Outside-Engine

./: CMakeLists.txt  README.md
include/: Outside.h
include/core/: Rendering.h  Shaders.h  Windows.h
include/editor/: ImguiRender.h  PerformanceMonitor.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Outside.cpp
src/core/: Rendering.cpp  Shaders.cpp  Windows.cpp
src/editor/: ImguiRender.cpp  PerformanceMonitor.cpp
